# sst

./: .gitignore  Cargo.toml  README.md  test_01_config.toml  trial.txt
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/src/sst/: enterprise.rs.html  helpers.rs.html  main.rs.html  manifest.rs.html  ui.rs.html
doc/sst/: all.html  fn.main.html  index.html  sidebar-items.js
doc/sst/enterprise/: index.html  sidebar-items.js  struct.ShipInfo.html
doc/sst/helpers/: fn.alert_status_of_quadrant.html  fn.calc_alert_status.html  fn.compact_summary_string.html  fn.validate_x_y_input.html  index.html  sidebar-items.js
doc/sst/manifest/: fn.construct_galaxy.html  fn.create_bad_guy_qi_vec.html  fn.create_vec_of_type.html  fn.find_actual_sector_info.html  fn.freeze.html  fn.thaw.html  index.html  (+3 more)
scripts/: devrust.sh  publish.sh  shutdown.sh  sst.sh
src/: .gitignore  astro.rs  constants.rs  disp.rs  enums.rs  gamedata.rs  helpers.rs  location.rs  main.rs  manifest.rs  movement.rs  sector.rs  ship.rs  ship_info.rs  statistics.rs  test_complete_game.rs  ui.rs  weapon.rs
src/enterprise/: movement.rs  weapon.rs
src/manifest/: constants.rs  entity.rs  enums.rs  gamedata.rs  spaceorg.rs  statistics.rs
src/ship_info/: lrs.rs  movement.rs  ship_system.rs  srs.rs  sys.rs  weapon.rs
src/space_info/: entity.rs  galaxy.rs  space_enum.rs  space_org.rs
src/ui/: cmd_proc.rs  help.rs  help_screen.rs  helpers.rs  logo.rs  logo_screen.rs  lrs.rs  misc.rs  sensor.rs  srs.rs  stat_screen.rs
test_data/: test01.sst  test_01_cmds.toml  test_01_save.sst
(+72 files in other folders)
